@@ -1,9 +1,10 @@
 2020-06-01 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/geda/geda_pin.c: Reformat documentation blocks, update
-      documentation for function:
+      documentation for functions:
 
           * geda_pin_set_whichend
+          * geda_pin_set_sequence
 
 2020-05-04 Wiley E. Hill <wileyhill@gmail.com>
 
